<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/dialog_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:gravity="center"
        android:textSize="16sp"
        android:text="@string/would_you_like_to_delete_this_contact"

        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/dialog_info">

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/dialog3_cancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.50"
            android:background="#007FFF"
            android:textColor="#ffffff"
            android:textSize="14sp"
            android:text="@string/cancel"/>

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/dialog3_delete"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.50"
            android:background="#c21807"
            android:textColor="#ffffff"
            android:textSize="14sp"
            android:text="@string/delete"/>
    </LinearLayout>
</RelativeLayout>