<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    >

    <ImageButton
        android:id="@+id/back_button_contact"
        android:layout_width="50dp"
        android:contentDescription="@string/back"
        android:layout_height="50dp"
        android:background="@drawable/back"
        android:layout_gravity="start"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:id="@+id/first_"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="28sp"
            android:textStyle="bold"
            android:text="@string/first_name"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="15dp"
            />
        <TextView
            android:id="@+id/last_"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="28sp"
            android:textStyle="bold"
            android:text="@string/last_name"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="15dp"
            />

    </LinearLayout>



    <de.hdodenhof.circleimageview.CircleImageView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/profile_image_contact"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/head"
        app:civ_border_width="2dp"
        app:civ_border_color="#FF000000"
        />

    <ImageButton
        android:id="@+id/edit_contact_button"
        android:layout_width="40dp"
        android:contentDescription="@string/edit"
        android:layout_height="40dp"
        android:background="@drawable/pencil"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:layout_gravity="end"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="left"
            android:layout_marginRight="5dp"
            >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginBottom="5dp"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:textSize="18sp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginRight="5dp"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginBottom="5dp"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/phone"
                    android:textSize="18sp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginRight="5dp"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginBottom="5dp"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:textSize="18sp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginRight="5dp"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginBottom="5dp"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/address"
                    android:textSize="18sp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginRight="5dp"
                    />

            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginBottom="5dp"
                >

                <TextView
                    android:id="@+id/first"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/first_name"
                    android:textSize="18sp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginRight="5dp"
                    />
                <TextView
                    android:id="@+id/last"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/last_name"
                    android:textSize="18sp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginRight="5dp"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginBottom="5dp"
                >

                <TextView
                    android:id="@+id/phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/phone"
                    android:textSize="18sp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginRight="5dp"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginBottom="5dp"
                >

                <TextView
                    android:id="@+id/email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:textSize="18sp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginRight="5dp"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginBottom="5dp"
                >

                <TextView
                    android:id="@+id/address1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/address_line_1"
                    android:textSize="18sp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginRight="5dp"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginBottom="5dp"
                >

                <TextView
                    android:id="@+id/address2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:text="@string/address_line_2"
                    android:layout_marginEnd="5dp"
                    android:layout_marginRight="5dp"
                    />

            </LinearLayout>


        </LinearLayout>


    </LinearLayout>


    <Button
        android:id="@+id/delete_contact_button"
        android:layout_width="150dp"
        android:layout_height="35dp"
        android:text="@string/delete_contact"
        android:background="#c21807"
        android:textColor="#ffffff"
        android:layout_marginTop="10dp"
        />



</LinearLayout>