<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    >

    <ImageButton
        android:contentDescription="@string/back"
        android:id="@+id/back_button_add_contact"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/back"
        android:layout_gravity="start"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Add Contact"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="#000000"
        android:layout_marginBottom="10dp"
        />



    <de.hdodenhof.circleimageview.CircleImageView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/profile_image_add_contact"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/head"
        app:civ_border_width="2dp"
        app:civ_border_color="#FF000000"
        android:layout_marginBottom="25dp"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginBottom="5dp"
        >

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="First Name*"
            android:textSize="18sp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            />

        <EditText
            android:id="@+id/firstName_field"
            android:layout_width="200dp"
            android:layout_height="25dp"
            android:background="#eeeeee"
            android:inputType="text"
            android:textColor="#000000"

            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginBottom="5dp"
        >

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/last_name"
            android:textSize="18sp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            />

        <EditText
            android:id="@+id/lastName_field"
            android:layout_width="200dp"
            android:layout_height="25dp"
            android:background="#eeeeee"
            android:inputType="text"
            android:textColor="#000000"

            />

    </LinearLayout>

    <LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:gravity="center"
    android:layout_marginBottom="5dp"
    >

    <TextView
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/phone"
        android:textSize="18sp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        />

    <EditText
        android:id="@+id/phone_field"
        android:layout_width="200dp"
        android:layout_height="25dp"
        android:background="#eeeeee"
        android:inputType="phone"
        android:textColor="#000000"

        />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginBottom="5dp"
        >

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="18sp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            />

        <EditText
            android:id="@+id/email_field"
            android:layout_width="200dp"
            android:layout_height="25dp"
            android:background="#eeeeee"
            android:inputType="textEmailAddress"
            android:textColor="#000000"

            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginBottom="5dp"
        >

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:textSize="18sp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            />

        <EditText
            android:id="@+id/address_field1"
            android:layout_width="200dp"
            android:layout_height="25dp"
            android:background="#eeeeee"
            android:inputType="text"
            android:textColor="#000000"

            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginBottom="5dp"
        >

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            />

        <EditText
            android:id="@+id/address_field2"
            android:layout_width="200dp"
            android:layout_height="25dp"
            android:background="#eeeeee"
            android:inputType="text"
            android:textColor="#000000"

            />

    </LinearLayout>

    <Button
        android:id="@+id/add_contact_button"
        android:layout_width="150dp"
        android:layout_height="35dp"
        android:text="@string/add_contact"
        android:background="@color/colorPrimary"
        android:textColor="#ffffff"
        android:layout_marginTop="10dp"
        />



</LinearLayout>